--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/timothymalcham/rocketEngine/issues"
   },
-  "homepage": "https://github.com/timothymalcham/rocketEngine"
+  "homepage": "https://github.com/timothymalcham/rocketEngine",
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.6.0"
+  }
 }
