--- a/package.json
+++ b/package.json
@@ -1,25 +1,7 @@
 {
-  "name": "rocketEngine",
+  "name": "RocketEngine",
   "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/timothymalcham/rocketEngine"
-  },
-  "author": "",
-  "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/timothymalcham/rocketEngine/issues"
-  },
-  "homepage": "https://github.com/timothymalcham/rocketEngine",
+  "author": "Timothy Malcham",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-connect": "~0.6.0"
   }
 }
