--- a/package.json
+++ b/package.json
@@ -3,5 +3,22 @@
   "version": "0.0.0",
   "author": "Timothy Malcham",
   "devDependencies": {
+    "gulp": "~3.5.6",
+    "tiny-lr": "0.0.5",
+    "gulp-livereload": "~1.2.0",
+    "gulp-minify-css": "~0.3.0",
+    "gulp-ruby-sass": "~0.4.0",
+    "gulp-autoprefixer": "0.0.6",
+    "gulp-rename": "~1.2.0",
+    "gulp-concat": "~2.2.0",
+    "gulp-clean": "~0.2.4",
+    "gulp-uglify": "~0.2.1",
+    "gulp-notify": "~1.2.1",
+    "gulp-cache": "~0.1.3",
+    "gulp-jshint": "~1.5.0",
+    "gulp-imagemin": "~0.1.5"
+  },
+  "dependencies": {
+    "gulp": "~3.5.6"
   }
 }
