--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "RocketEngine",
+  "name": "rocketEngine",
   "version": "0.0.0",
-  "author": "Timothy Malcham",
+  "description": "",
+  "main": "gulp.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/timothymalcham/rocketEngine"
+  },
+  "author": "",
+  "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/timothymalcham/rocketEngine/issues"
+  },
+  "homepage": "https://github.com/timothymalcham/rocketEngine",
   "devDependencies": {
     "gulp": "~3.5.6",
+    "gulp-rename": "~1.2.0",
     "tiny-lr": "0.0.5",
+    "gulp-notify": "~1.2.1",
     "gulp-livereload": "~1.2.0",
+    "gulp-clean": "~0.2.4",
+    "gulp-autoprefixer": "0.0.6",
+    "gulp-uglify": "~0.2.1",
+    "gulp-concat": "~2.2.0",
+    "gulp-cache": "~0.1.3",
     "gulp-minify-css": "~0.3.0",
     "gulp-ruby-sass": "~0.4.0",
-    "gulp-autoprefixer": "0.0.6",
-    "gulp-rename": "~1.2.0",
-    "gulp-concat": "~2.2.0",
-    "gulp-clean": "~0.2.4",
-    "gulp-uglify": "~0.2.1",
-    "gulp-notify": "~1.2.1",
-    "gulp-cache": "~0.1.3",
     "gulp-jshint": "~1.5.0",
     "gulp-imagemin": "~0.1.5"
   },
